bash_processing.ipynb: Finalized first pass with markdown comments

--- a/bash_processing.ipynb
+++ b/bash_processing.ipynb
@@ -212,6 +212,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the PAM50 is registered with the T1w image, we can warp all objects pertaining to the PAM50 into the T1w native space. These objects notably include a [white matter atlas](https://www.ncbi.nlm.nih.gov/pubmed/26099457), which will be subsequently used to extract qMR metrics within specific white matter tracts."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -227,6 +234,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is the result of the warping of the PAM50 template and atlas to the T1w native space. The white matter (in blue) is overlaid on the T1-weighted anatomical scan (in grayscale). Orientation is axial. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -234,7 +248,14 @@
    },
    "outputs": [],
    "source": [
-    "sct_warp_template_qc = join(qc_folder, mt_folder, 'sct_warp_template')\n",
+    "# Plot QC figures\n",
+    "if sys.platform == 'darwin':\n",
+    "    # For local testing on OSX    \n",
+    "    sct_warp_template_qc = 'qc/sct_example_data/mt/sct_warp_template'\n",
+    "else:\n",
+    "    # For linux and on-line Binder execution\n",
+    "    sct_warp_template_qc = join(qc_folder, mt_folder, 'sct_warp_template')\n",
+    "\n",
     "folders = list(filter(lambda x: os.path.isdir(os.path.join(sct_warp_template_qc, x)), os.listdir(sct_warp_template_qc)))\n",
     "qc_date = max(folders)\n",
     "\n",
@@ -243,8 +264,16 @@
     "bkg=mpimg.imread(join(sct_warp_template_qc_dir, 'bkg_img.png'))\n",
     "overlay=mpimg.imread(join(sct_warp_template_qc_dir, 'overlay_img.png'))\n",
     "plt.figure(figsize = (20,2))\n",
+    "plt.axis('off')\n",
     "imgplot = plt.imshow(bkg)\n",
     "imgplot = plt.imshow(overlay,alpha=0.3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once co-registration between images and registration to the template is complete, we can venture into computing our favorite qMR metrics. Here, we compute the magnetization transfer ratio (MTR) and the magnetization transfer saturation (MTsat)."
    ]
   },
   {
@@ -266,6 +295,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that our metrics are computed, we want to extract their values within specific tracts of the spinal cord. This is done with the function `sct_extract_metric`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -278,15 +314,6 @@
     "!sct_extract_metric -i mtsat.nii.gz -l 51 -vert 2:4 -o {results_filename} -append 1\n",
     "!sct_extract_metric -i t1map.nii.gz -l 51 -vert 2:4 -o {results_filename} -append 1\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "Python3"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
