bash_processing.ipynb: Added figures

--- a/bash_processing.ipynb
+++ b/bash_processing.ipynb
@@ -68,9 +68,6 @@
     "\n",
     "file_ext = '.nii.gz'\n",
     "\n",
-    "# Ouputs\n",
-    "results_filename = 'results.csv'\n",
-    "\n",
     "if not verbose:\n",
     "    clear_output()"
    ]
@@ -261,8 +258,8 @@
     "\n",
     "sct_warp_template_qc_dir = join(sct_warp_template_qc, qc_date)\n",
     "\n",
-    "bkg=mpimg.imread(join(sct_warp_template_qc_dir, 'bkg_img.png'))\n",
-    "overlay=mpimg.imread(join(sct_warp_template_qc_dir, 'overlay_img.png'))\n",
+    "bkg = mpimg.imread(join(sct_warp_template_qc_dir, 'bkg_img.png'))\n",
+    "overlay = mpimg.imread(join(sct_warp_template_qc_dir, 'overlay_img.png'))\n",
     "plt.figure(figsize = (20,2))\n",
     "plt.axis('off')\n",
     "imgplot = plt.imshow(bkg)\n",
@@ -310,9 +307,41 @@
    "outputs": [],
    "source": [
     "# Extract MTR, MTsat and T1 in WM between C2 and C4 vertebral levels\n",
-    "!sct_extract_metric -i mtr.nii.gz -l 51 -vert 2:4 -o {results_filename}\n",
-    "!sct_extract_metric -i mtsat.nii.gz -l 51 -vert 2:4 -o {results_filename} -append 1\n",
-    "!sct_extract_metric -i t1map.nii.gz -l 51 -vert 2:4 -o {results_filename} -append 1\n"
+    "!sct_extract_metric -i mtr.nii.gz -l 51 -vert 2:4 -perlevel 1 -o mtr_in_wm.csv\n",
+    "!sct_extract_metric -i mtsat.nii.gz -l 51 -vert 2:4 -perlevel 1 -o mtsat_in_wm.csv\n",
+    "!sct_extract_metric -i t1map.nii.gz -l 51 -vert 2:4 -perlevel 1 -o t1_in_wm.csv\n",
+    "\n",
+    "if not verbose:\n",
+    "    clear_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display plots of results\n",
+    "import pandas as pd\n",
+    "fig, ax = plt.subplots(ncols=3, figsize=(15,4))\n",
+    "\n",
+    "# Build dic for plot\n",
+    "plot_dic = {'file': ['mtr_in_wm.csv', 'mtsat_in_wm.csv', 't1_in_wm.csv'],\n",
+    "            'ylabel': ['MTR [%]', 'MTsat [a.u.]', 'T1 [s]']}\n",
+    "\n",
+    "# Loop across dic entries\n",
+    "for i in range(len(plot_dic)+1):\n",
+    "    df = pd.read_csv(plot_dic['file'][i])\n",
+    "    df.plot.bar(x='VertLevel', y='WA()', rot=0, ax=ax[i], legend=False)\n",
+    "    ax[i].set_ylabel(plot_dic['ylabel'][i])\n",
+    "    ax[i].yaxis.grid()\n",
+    "\n",
+    "\n",
+    "# print df\n",
+    "# sample_data_table = FF.create_table(df.head())\n",
+    "# py.iplot(sample_data_table, filename='sample-data-table')\n",
+    "\n",
+    "# plt.figure(figsize = (20,2))\n"
    ]
   }
  ],
