bash_processing.ipynb: Added blurb for introducing bargraphs

--- a/bash_processing.ipynb
+++ b/bash_processing.ipynb
@@ -316,6 +316,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results are output as csv files, which we can then open and display as bar graphs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -334,14 +341,7 @@
     "    df = pd.read_csv(plot_dic['file'][i])\n",
     "    df.plot.bar(x='VertLevel', y='WA()', rot=0, ax=ax[i], legend=False)\n",
     "    ax[i].set_ylabel(plot_dic['ylabel'][i])\n",
-    "    ax[i].yaxis.grid()\n",
-    "\n",
-    "\n",
-    "# print df\n",
-    "# sample_data_table = FF.create_table(df.head())\n",
-    "# py.iplot(sample_data_table, filename='sample-data-table')\n",
-    "\n",
-    "# plt.figure(figsize = (20,2))\n"
+    "    ax[i].yaxis.grid()"
    ]
   }
  ],
